--- a/packages/SystemUI/res/values/awaken_dimens.xml
+++ b/packages/SystemUI/res/values/awaken_dimens.xml
@@ -30,6 +30,9 @@
     <dimen name="status_bar_mobile_type_height">8dp</dimen>
     <dimen name="status_bar_mobile_type_padding">2dp</dimen>
     <dimen name="status_bar_mobile_type_padding_limit">10dp</dimen>
+    
+    <!-- QQS Brightness slider -->
+    <dimen name="quick_qs_brightness_margin_top">24dp</dimen>
 
     <!-- Screen record dot -->
     <dimen name="screenrecord_dot_size">48dp</dimen>
