core: Configure SQLite to operate in MEMORY mode
This change yields considerable SQLite performance gains. It
should be generally safe as this device has irremovable battery.

Some OEMs have been doing this for years.

Change-Id: I541709fc771d4b501b56b8555e5e8a04486d0293
Signed-off-by: minaripenguin <minaripenguin@users.noreply.github.com>

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2299,7 +2299,7 @@
 
          The PERSIST mode results in data persisting in the journal beyond the life of
          a transaction, so it interacts poorly with SECURE_DELETE. -->
-    <string name="db_default_journal_mode" translatable="false">TRUNCATE</string>
+    <string name="db_default_journal_mode" translatable="false">MEMORY</string>
 
     <!-- Maximum size of the persistent journal file in bytes.
          If the journal file grows to be larger than this amount then SQLite will
@@ -2315,7 +2315,7 @@
          NORMAL also preserves durability in non-WAL modes and uses checksums to ensure
          integrity although there is a small chance that an error might go unnoticed.
          Choices are: FULL, NORMAL, OFF. -->
-    <string name="db_default_sync_mode" translatable="false">FULL</string>
+    <string name="db_default_sync_mode" translatable="false">OFF</string>
 
     <!-- The database synchronization mode when using Write-Ahead Logging.
          From https://www.sqlite.org/pragma.html#pragma_synchronous:
@@ -2327,7 +2327,7 @@
          or journal mode. The synchronous=NORMAL setting is a good choice for most applications
          running in WAL mode.
          Choices are: FULL, NORMAL, OFF. -->
-    <string name="db_wal_sync_mode" translatable="false">NORMAL</string>
+    <string name="db_wal_sync_mode" translatable="false">OFF</string>
 
     <!-- The Write-Ahead Log auto-checkpoint interval in database pages (typically 1 to 4KB).
          The log is checkpointed automatically whenever it exceeds this many pages.
