--- a/packages/SystemUI/res/values/awaken_dimens.xml
+++ b/packages/SystemUI/res/values/awaken_dimens.xml
@@ -49,4 +49,7 @@
 
     <!-- Width of the battery icon in the status bar when set to circle style. -->
     <dimen name="status_bar_battery_icon_circle_width">14.5dp</dimen>
+    
+    <!-- QQS & QS margin top -->
+    <dimen name="qqs_margin_top">16dp</dimen>
 </resources>
