--- a/packages/SettingsLib/SettingsTheme/res/drawable-v31/settingslib_seekbar_progress.xml
+++ b/packages/SettingsLib/SettingsTheme/res/drawable-v31/settingslib_seekbar_progress.xml
@@ -16,20 +16,19 @@
   ~ limitations under the License.
   -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:priv-android="http://schemas.android.com/apk/prv/res/android"
     android:autoMirrored="true">
-    <item android:gravity="end|center" android:end="4dp" android:height="12dp">
+    <item android:height="20dp">
         <selector>
             <item android:state_enabled="false">
-                <shape android:tint="?android:attr/colorBackground" android:shape="oval">
-                    <size android:width="12dp" android:height="12dp" />
-                    <solid android:color="#40626161" />
+                <shape android:tint="?android:attr/colorAccent" android:shape="rectangle">
+                    <solid android:color="#80ffffff" />
+                    <corners android:radius="10dp" />
                 </shape>
             </item>
             <item android:state_enabled="true">
-                <shape android:tint="?android:attr/colorBackground" android:shape="oval">
-                    <size android:width="12dp" android:height="12dp" />
-                    <solid android:color="#80626161" />
+                <shape android:tint="?android:attr/colorAccent" android:shape="rectangle">
+                    <solid android:color="#ffffffff" />
+                    <corners android:radius="10dp" />
                 </shape>
             </item>
         </selector>
