systemUtils: Update restart utility methods
Change-Id: Ifad26faa7b5913b2186a0d78b5d839673469c582
Signed-off-by: minaripenguin <minaripenguin@users.noreply.github.com>

--- a/core/res/res/values/awaken_symbols.xml
+++ b/core/res/res/values/awaken_symbols.xml
@@ -58,6 +58,10 @@
 
     <!-- Horizon Light -->
     <java-symbol type="integer" name="config_AmbientPulseLightColor" />
+    
+    <!-- SystemUI restart dialog -->
+    <java-symbol type="string" name="systemui_restart_title" />
+    <java-symbol type="string" name="systemui_restart_message" />
 
     <!-- Location indicator -->
     <java-symbol type="drawable" name="stat_sys_location" />
